--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,14 +6,14 @@
         <item name="android:windowBackground">@color/black</item>
         <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/white</item>
-        <item name="actionMenuTextColor">@color/white</item>
-
-
-        //For changing toolbar three dot menu appearance
     </style>
-    <style name="Theme.PopupOverlay.Menu" parent="ThemeOverlay.AppCompat.Light" >
+
+    //For changing toolbar three dot menu appearance getStarted fragment
+    <style name="Theme.PopupOverlay.Menu" parent="Theme.Material3.DayNight.NoActionBar" >
         <item name="android:textColor">@color/dark_gray</item>
+        <item name="actionMenuTextColor">@color/white</item>
     </style>
+
 
 
     <style name="ThreeDotStyle" parent="Widget.AppCompat.Light.ActionButton.Overflow">
