--- a/app/src/main/res/layout/rcy_item_accounts.xml
+++ b/app/src/main/res/layout/rcy_item_accounts.xml
@@ -8,13 +8,15 @@
 
     <ImageView
         android:id="@+id/imgAccounts"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:scaleType="fitXY"
         android:src="@drawable/ic_chevron_right"
         app:layout_constraintBottom_toTopOf="@id/txtAccounts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="5dp"/>
 
     <TextView
         android:id="@+id/txtAccounts"
@@ -22,9 +24,19 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Accounts name"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgAccounts" />
 
+    <ImageView
+        android:id="@+id/imgLock"
+        android:padding="3dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/txtAccounts"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_lock"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
