--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -50,9 +50,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtWhoIs"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_margin="15dp"
+        android:paddingHorizontal="25dp"
         tools:listitem="@layout/rcy_item_accounts"
         />
 
