--- a/app/src/main/res/menu/btm_nav_menu.xml
+++ b/app/src/main/res/menu/btm_nav_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/homeFragment"
@@ -19,5 +20,6 @@
     <item
         android:id="@+id/downloadsFragment"
         android:icon="@drawable/ic_download_circle"
-        android:title="Downloads" />
+        android:title="Downloads"
+        />
 </menu>
