--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -102,7 +102,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardViewPoster"
         android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_height="460dp"
         android:layout_marginHorizontal="18dp"
         app:cardCornerRadius="20dp"
         android:layout_marginVertical="15dp"
@@ -122,7 +122,7 @@
            <ImageView
                android:id="@+id/imgPosterHeader"
                android:layout_width="match_parent"
-               android:layout_height="360dp"
+               android:layout_height="match_parent"
                android:minHeight="360dp"
                android:scaleType="fitXY"
                android:src="@drawable/img"
@@ -166,7 +166,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:backgroundTint="@color/dark_gray"
+                android:backgroundTint="@color/bottom_sheet_bg"
                 android:text="My List"
                 app:backgroundTint="@color/dark_gray"
                 app:cornerRadius="5dp"
