--- a/app/src/main/res/drawable/bg_btn_play_alpha.xml
+++ b/app/src/main/res/drawable/bg_btn_play_alpha.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:color="@color/white"
-        android:width="1dp"/>
 
-    <solid android:color="#AAFF0000"
-        />
+    <solid android:color="#80000000" /> <!-- Semi-transparent black color -->
+    <stroke
+        android:width="2dp"
+        android:color="@android:color/white" /> <!-- White stroke with 2dp width -->
+
 
 </shape>
