--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -104,7 +104,7 @@
         android:layout_width="match_parent"
         android:layout_height="460dp"
         android:layout_marginHorizontal="18dp"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="10dp"
         android:layout_marginVertical="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,6 +139,7 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:text="categoryName "
+
                 app:layout_constraintBottom_toTopOf="@id/btnPlayHeader"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -168,7 +169,7 @@
                 android:layout_margin="10dp"
                 android:backgroundTint="@color/bottom_sheet_bg"
                 android:text="My List"
-                app:backgroundTint="@color/dark_gray"
+                app:backgroundTint="@color/semiTransparent"
                 app:cornerRadius="5dp"
                 app:icon="@drawable/ic_add"
                 app:iconGravity="textStart"
@@ -181,6 +182,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
+
     <TextView
         android:id="@+id/txtMobileGames"
         android:layout_width="0dp"
@@ -209,7 +211,6 @@
         app:layout_constraintTop_toBottomOf="@id/txtMobileGames"
         app:layout_constraintStart_toStartOf="@id/txtMobileGames"
         app:layout_constraintEnd_toEndOf="@id/txtMyGameList"
-
         />
 
 <!--
