--- a/app/src/main/res/layout/rcy_item_continue_watching.xml
+++ b/app/src/main/res/layout/rcy_item_continue_watching.xml
@@ -1,43 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/dark_gray"
+    android:layout_marginHorizontal="5dp"
+    app:strokeWidth="0dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.imageview.ShapeableImageView
+        <ImageView
             android:id="@+id/imgWatched"
-            android:layout_width="134dp"
-            android:layout_height="170dp"
+            android:layout_width="104dp"
+            android:layout_height="146dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/bottomBar"
-            android:src="@color/black"
+            app:layout_constraintBottom_toTopOf="@id/guide"
+            android:src="@drawable/img"
+            android:scaleType="fitXY"
             />
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+        <ImageButton
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             app:layout_constraintTop_toTopOf="@id/imgWatched"
             app:layout_constraintBottom_toBottomOf="@id/imgWatched"
             app:layout_constraintStart_toStartOf="@id/imgWatched"
             app:layout_constraintEnd_toEndOf="@id/imgWatched"
             android:background="@drawable/bg_btn_play_alpha"
-            android:backgroundTintMode="screen"
+            android:src="@drawable/ic_play"
+            app:tint="@color/white"
+            android:scaleType="fitXY"
+            android:padding="10dp"
+
             />
 
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomBar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintGuide_percent="0.78"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imgBtnInfo"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_info"
+
+            android:scaleType="fitCenter"
+            android:backgroundTint="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guide"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/imgBtnDots"/>
+
+
+        <ImageButton
+            android:id="@+id/imgBtnDots"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_vertical_dots"
+            android:backgroundTint="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@id/imgBtnInfo"
+            app:layout_constraintStart_toEndOf="@id/imgBtnInfo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/imgBtnInfo"/>
+
+
+
+
+
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
