--- a/app/src/main/res/layout/rcy_movie_item_medium_poster.xml
+++ b/app/src/main/res/layout/rcy_movie_item_medium_poster.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp"
     app:cardCornerRadius="10dp"
-    app:strokeWidth="0.5dp"
-    app:strokeColor="@color/gray">
+    app:strokeWidth="0dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,10 +19,9 @@
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
