--- a/app/src/main/res/layout/rcy_item_continue_watching.xml
+++ b/app/src/main/res/layout/rcy_item_continue_watching.xml
@@ -7,6 +7,7 @@
     app:cardBackgroundColor="@color/dark_gray"
     android:layout_marginHorizontal="5dp"
     app:strokeWidth="0dp"
+    app:cardCornerRadius="2dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +17,7 @@
         <ImageView
             android:id="@+id/imgWatched"
             android:layout_width="104dp"
-            android:layout_height="146dp"
+            android:layout_height="136dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
