--- a/app/src/main/res/layout/rcy_movie_item_games.xml
+++ b/app/src/main/res/layout/rcy_movie_item_games.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="10dp"
     app:strokeWidth="0dp"
     >
 
@@ -23,7 +23,10 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"/>
+            app:layout_constraintVertical_bias="0.5"
+            />
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
