--- a/app/src/main/res/layout/rcy_first_item_downloads.xml
+++ b/app/src/main/res/layout/rcy_first_item_downloads.xml
@@ -33,6 +33,7 @@
             android:textSize="17sp"
             android:lines="1"
             android:ems="10"
+            android:textStyle="bold"
             android:layout_marginHorizontal="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +50,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="5dp"
             android:textSize="10sp"
+            android:textColor="#8B8B8B"
             />
 
         <ImageButton
